--- a/FirebaseDemo/GoogleService-Info.plist
+++ b/FirebaseDemo/GoogleService-Info.plist
@@ -19,15 +19,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>ios-firebase-20201209.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:983945287425:ios:868d35d82321bfa227ed00</string>
 </dict>
